Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumObjNumObj.quorum
Number num
num:SetValue(7.5)
Number n = cast(Number, num)
number x = n:GetValue()
output x