Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBoolObjNumObj.quorum
Number num
num:setValue(7.5)
Boolean b = num